test fix for fontAwesome icons on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 /*
 #130b15;
 */
+.fa {
+    text-rendering: optimizeLegibility;
+}
 
 body {
     font-family: 'Roboto', sans-serif;
